# Learn3D

./: .gitignore  CMakeLists.txt  README.md  opengl.sln
3rd/include/glad/: glad.h
3rd/libs/: assimp-vc140-mt.exp  assimp-vc140-mt.lib  glad.c  glfw3.lib
Task2/: CMakeLists.txt  Camera.h  opengl.cpp
opengl/: Camera.h  fshaderOne.txt  fshaderTwo.txt  opengl.vcxproj  opengl.vcxproj.filters  shader.h  stb_image.h  vshader.txt
